--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,43 @@
 {
-  "name": "phoneburner/composer-replacements",
-  "description": "A 'no-op' package with no dependencies used to cleanly replace other packages",
-  "type": "library",
-  "authors": [
-    {
-      "name": "Andy Snell",
-      "email": "andy@phoneburner.com"
+    "name": "phoneburner/composer-replacements",
+    "description": "A 'no-op' Composer dependency used to cleanly replace other packages and unneeded polyfills",
+    "type": "library",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Andy Snell",
+            "email": "andy@phoneburner.com"
+        }
+    ],
+    "config": {
+        "sort-packages": true
+    },
+    "require": {
+        "php": "^8.4.0",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "ext-intl": "*",
+        "ext-random": "*",
+        "ext-sodium": "*",
+        "ext-mbstring": "*"
+    },
+    "replace": {
+        "paragonie/random_compat": ">=v2.0.0",
+        "paragonie/sodium_compat": "*",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-intl-grapheme": "*",
+        "symfony/polyfill-intl-icu": "*",
+        "symfony/polyfill-intl-idn": "*",
+        "symfony/polyfill-intl-messageformatter": "*",
+        "symfony/polyfill-intl-normalizer": "*",
+        "symfony/polyfill-mbstring": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*",
+        "symfony/polyfill-php82": "*",
+        "symfony/polyfill-php83": "*",
+        "symfony/polyfill-php84": "*"
     }
-  ],
-  "config": {
-    "sort-packages": true
-  },
-  "require": {
-    "php": "~8.3.0 || ~8.4.0",
-    "ext-ctype": "*",
-    "ext-iconv": "*",
-    "ext-intl": "*",
-    "ext-random": "*",
-    "ext-sodium": "*",
-    "ext-mbstring": "*"
-  },
-  "replace": {
-    "paragonie/random_compat": ">=v2.0.0",
-    "paragonie/sodium_compat": "*",
-    "symfony/polyfill-ctype": "*",
-    "symfony/polyfill-iconv": "*",
-    "symfony/polyfill-intl-grapheme": "*",
-    "symfony/polyfill-intl-icu": "*",
-    "symfony/polyfill-intl-idn": "*",
-    "symfony/polyfill-intl-messageformatter": "*",
-    "symfony/polyfill-intl-normalizer": "*",
-    "symfony/polyfill-mbstring": "*",
-    "symfony/polyfill-php72": "*",
-    "symfony/polyfill-php73": "*",
-    "symfony/polyfill-php80": "*",
-    "symfony/polyfill-php81": "*",
-    "symfony/polyfill-php82": "*",
-    "symfony/polyfill-php83": "*"
-  }
 }
