Prevent CVE False Positives with paragonie/random_compat Library <= v2

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "ext-mbstring": "*"
     },
     "replace": {
-        "paragonie/random_compat": ">=v2.0.0",
+        "paragonie/random_compat": ">v2.0.0",
         "paragonie/sodium_compat": ">=v2.0.0",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
