Prevent CVE False Positives with paragonie/sodium_compat Library < v2.5

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "ext-mbstring": "*"
     },
     "replace": {
-        "paragonie/random_compat": ">v2.0.0",
-        "paragonie/sodium_compat": ">=v2.0.0",
+        "paragonie/random_compat": ">=v2.0.0",
+        "paragonie/sodium_compat": ">=v2.5.0",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
         "symfony/polyfill-intl-grapheme": "*",
